A few minor accessibility tweaks

--- a/mediathread/templates/assetmgr/install_chrome_extension.html
+++ b/mediathread/templates/assetmgr/install_chrome_extension.html
@@ -22,9 +22,11 @@
     <div class="pull-left">
         <img width="32" height="32"
              src="{% static 'img/browser_icons/chrome/chrome-a_128.png' %}"
+             alt="Compatible with Google Chrome"
              title="Compatible with Google Chrome">
         <img width="32" height="32"
              src="{% static 'img/browser_icons/chrome/chromium-128.png' %}"
+             alt="Compatible with Chromium"
              title="Compatible with Chromium">
     </div>
     <div class="clearfix"></div>
