--- a/media/templates/homepage.mustache
+++ b/media/templates/homepage.mustache
@@ -38,7 +38,7 @@
 
     <a href="#" id="homepage-create-menu" onclick='jQuery("#create-project-menu").toggle();' class="btn btn-default create right">
         Create&nbsp;
-        <img src="{{#staticUrl}}{{/staticUrl}}img/menuselect.png" width="6" height="12" />
+        <img src="{{#staticUrl}}{{/staticUrl}}img/menuselect.png" width="6" height="12" alt="Create project menu" />
     </a>
     <div id="create-project-menu" style="display: none;">
         {{#is_faculty}}
