--- a/media/templates/discussion.mustache
+++ b/media/templates/discussion.mustache
@@ -65,7 +65,7 @@
                                         {{/close}}
                                 {{/context.discussion.thread}}
                             {{/context.discussion.thread.length}}
-                            <form style="display: none" method="POST" action="/comments/post/" class="threaded_comments_form" data-maxlength="{{context.discussion.max_length}}">
+                            <form novalidate style="display: none" method="POST" action="/comments/post/" class="threaded_comments_form" data-maxlength="{{context.discussion.max_length}}">
                                 <h3 style="display: none">Respond</h3>
                                 <input type="hidden" id="comment-edit-id" name="edit-id" />
                                 <script type="text/javascript" src="{{#staticUrl}}{{/staticUrl}}js/app/tinymce_init.js"></script>
