Fix course list filter

--- a/mediathread/templates/courseaffils/course_list.html
+++ b/mediathread/templates/courseaffils/course_list.html
@@ -68,7 +68,7 @@
     <form class="form-inline" role="search">
         <div class="form-group">
             <label for="course-title-filter">Filter: </label>
-            <input id="course-title-filter" class="form-control"
+            <input id="course-title-filter" class="course-search form-control"
                    type="search"
                    data-column="all"
                    autofocus>
