--- a/mediathread/templates/assetmgr/asset_embed_view.html
+++ b/mediathread/templates/assetmgr/asset_embed_view.html
@@ -16,13 +16,18 @@
     {% endcompress %}
 </head>
 
-<body>
-    <h3>{{title}}</h3>
-    {% if timecode %}
-        <p>{{timecode}}</p>
-    {% endif %}
+<body class="lti-asset-view">
     <div id="videoclipbox" class="videoclipbox" style="display: none;">
-        <div class="clipplay"></div><br />
+        <div class="videoclipbox-metadata">
+            <img class="pull-left" src='{% static "img/icons/icon-16.png" %}' alt_text="mediathread icon" />
+            <div class="title pull-left">{{title}}</div>
+            {% if timecode %}
+            <div class="clipplay-container pull-right">
+                {{timecode}} <div class="clipplay pull-right"></div>
+            </div>
+            {% endif %}
+        </div>
+
         <div class="asset-object" style="border: none; background-color: #ededed;"></div>
         <div class="asset-display"></div>
         <div class="clipstrip-display"></div>
@@ -52,7 +57,7 @@
                 {% endif %}
                 'autoplay': false,
                 'winHeight': function() {
-                    return 200;
+                    return {{defaultHeight}} - 50
                 }
             });
 
