--- a/mediathread/templates/lti_auth/landing_page.html
+++ b/mediathread/templates/lti_auth/landing_page.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" media="screen" />
     </head>
     <body>
+        <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
                 <div class="container">
@@ -15,6 +16,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </body>
 </html>
