streamline a selenium test

--- a/media/templates/asset_view_help.mustache
+++ b/media/templates/asset_view_help.mustache
@@ -42,7 +42,8 @@
     </div>
     <div class="visualclear"></div>
     <div style="float: right">
-      <input class="btn btn-primary right" type="button"
+      <input id="dismiss-asset-workspace-help"
+      class="btn btn-primary right" type="button"
       onclick="javascript:annotationList.dismissHelp(this)"
       value="Dismiss Help">
     </div>
