--- a/media/templates/gallery.mustache
+++ b/media/templates/gallery.mustache
@@ -50,7 +50,8 @@
             </div>
             <div class="visualclear"></div>
             <div style="float: right">    
-                <input class="btn-primary right dismiss-help" type="button" value="Dismiss Help">
+                <input id="dismiss-gallery-help"
+                    class="btn-primary right dismiss-help" type="button" value="Dismiss Help">
             </div>
         </div>
 
