--- a/mediathread/templates/lti_auth/fail_course_configuration.html
+++ b/mediathread/templates/lti_auth/fail_course_configuration.html
@@ -1,83 +1,111 @@
-{% load coursetags %}
-{% load methtags %}
+{% load coursetags static methtags %}
 {% get_instructor_courses user as courses %}
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" media="screen" />
+
+    <style>
+        #standardnav_container {
+            display: block;
+            float: left;
+            margin: 0;
+            width: 100%;
+            padding: 0;
+            background-color: #383838;
+        }
+    </style>
+
 </head>
 <body>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="container">
-                <div class="well">
-                    <h2>Course Configuration</h2>
-
-                    {% if autocreate_course %}
-                         {% if 'Administrator' in roles or 'Instructor' in roles or 'Staff' in roles %}
-                            <form action="{% url 'lti-course-create' %}" method='POST'>
-                                <input type="hidden" name="lms_course" value="{{lms_course}}">
-                                <input type="hidden" name="lms_course_title" value="{{lms_course_title}}">
-                                <button type="submit" class="btn btn-primary">Connect New Course</button>
-                            </form>
-                         {% endif %}
-                    {% else %}
-                        {% if courses|length < 1 %}
-                            {% if 'Administrator' in roles or 'Instructor' in roles or 'Staff' in roles %}
-                                <p class="lead"><a href='/' target="about:blank">Navigate to Mediathread</a> to activate or create the course</p>
-                            {% else %}
-                                <p class="lead">
-                                    Your {{title}} course has not been configured to use this component.<br />
-                                    Contact your instructor for more information.</p>
-                                <p>
-                            {% endif %}
-                        {% endif %}
-                    {% endif %}
-
-                    {% if courses|length > 0 %} 
-                        <p class="lead">
-                        Connect an existing Mediathread course to your Canvas course.<br />
-
-                        {% if not autocreate_course %}
-                            Don't see your course? <a href='/' target="about:blank">Navigate to Mediathread</a> to activate or create the course first.</p>
-                        {% endif %}
-
-                        <table class="table course-choices tablesorter">
-                            <thead>
-                                <tr>
-                                    <th>Course Title</th>
-                                    <th>Term</th>
-                                    <th class="nosort">Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for course in courses %}
-                                    {% if course.group.course_group.count < 1 %}
-                                        <tr>
-                                            <td>{{course.title}}</td>
-                                            <td>
-                                                {% if course.info.termyear %}
-                                                    {{course.info.termyear}}
-                                                {% elif course.to_dict %}
-                                                    {{course.to_dict.term|int_to_term}} {{course.to_dict.year}}
-                                                {% endif %}
-                                            </td>
-                                            <td>
-                                                <form action="{% url 'lti-enable-course' %}" method="post">
-                                                    <input type="hidden" name="group" value="{{course.group.id}}">
-                                                    <input type="hidden" name="faculty_group" value="{{course.faculty_group.id}}">
-                                                    <input type="hidden" name="lms_course" value="{{lms_course}}">
-                                                    <button type="submit">Connect</button>
-                                                </form>
-                                            </td>
-                                        </tr>
-                                     {% endif %}
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% endif %}
-                </div>
+    <div id="header">
+        <div id="standardnav_container">
+            <div id="mediathread_logo">
+                <a href="/">
+                    <img src='{% static "img/logo_mediathread_new.png" %}' alt="mediathread logo" width="156" height="45" />
+                    <span class="sr-only">Home</span>
+                </a>
             </div>
         </div>
-    </div> 
+    </div>
+
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Course Configuration</h2>
+
+            {% if autocreate_course %}
+                 {% if 'Administrator' in roles or 'Instructor' in roles or 'Staff' in roles %}
+                    <p class="lead">
+                        Create a Mediathread course for this Canvas course.<br />
+                    </p>
+                    <form action="{% url 'lti-course-create' %}" method='POST'>
+                        <input type="hidden" name="lms_course" value="{{lms_course}}">
+                        <input type="hidden" name="lms_course_title" value="{{lms_course_title}}">
+                        <button type="submit" class="btn btn-primary">Create {{lms_course_title}}</button>
+                    </form>
+                 {% endif %}
+                 <br />
+            {% else %}
+                {% if courses|length < 1 %}
+                    {% if 'Administrator' in roles or 'Instructor' in roles or 'Staff' in roles %}
+                        <p class="lead"><a href='/' target="about:blank">Navigate to Mediathread</a> to activate or create the course</p>
+                    {% else %}
+                        <p class="lead">
+                            Your {{title}} course has not been configured to use this component.<br />
+                            Contact your instructor for more information.</p>
+                        <p>
+                    {% endif %}
+                {% endif %}
+            {% endif %}
+
+            {% if courses|length > 0 %} 
+                <p class="lead">
+                Connect a Mediathread course to this Canvas course.<br />
+
+                {% if not autocreate_course %}
+                    Don't see your course? <a href='/' target="about:blank">Navigate to Mediathread</a> to activate or create the course first.</p>
+                {% endif %}
+
+                <div class="row">
+                <div class="col-md-12">
+                <table class="table course-choices tablesorter">
+                    <thead>
+                        <tr>
+                            <th>Course Title</th>
+                            <th>Term</th>
+                            <th class="nosort">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for course in courses %}
+                            {% if course.group.course_group.count < 1 %}
+                                <tr>
+                                    <td>{{course.title}}</td>
+                                    <td>
+                                        {% if course.info.termyear %}
+                                            {{course.info.termyear}}
+                                        {% elif course.to_dict %}
+                                            {{course.to_dict.term|int_to_term}} {{course.to_dict.year}}
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        <form action="{% url 'lti-enable-course' %}" method="post">
+                                            <input type="hidden" name="group" value="{{course.group.id}}">
+                                            <input type="hidden" name="faculty_group" value="{{course.faculty_group.id}}">
+                                            <input type="hidden" name="lms_course" value="{{lms_course}}">
+                                            <input type="hidden" name="lms_course_title" value="{{lms_course_title}}">
+                                            <button class="btn btn-info" type="submit">Connect</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                             {% endif %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+                </div></div>
+            {% endif %}
+        </div>
+    </div>
+    </div>
 </body>
 </html>
