LTI Embed View Tweaks
* In the edit view, show an item placeholder.
* Expand width/height of the published view to eliminate scroll bars

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4725,13 +4725,14 @@ ul.section-tabs>li>a.active {
     height: 10px;
 }
 
+/* LTI Landing Page */
+.lti-landing-page .mediathread-background-logo {
+    height: 450px;
+}
+
 /* LTI Asset View */
 .lti-asset-view .flowplayer-timedisplay {
     display: none;
-}
-
-.lti-asset-view .asset-display {
-    text-align: left;
 }
 
 .lti-asset-view .videoclipbox {
