--- a/mediathread/templates/assetmgr/asset_embed_list.html
+++ b/mediathread/templates/assetmgr/asset_embed_list.html
@@ -64,6 +64,8 @@
     <form id="asset-embed-form" action="." method="post">
         <input type="hidden" name="return_url" value="{{return_url}}">
         <input id="selection-to-embed" type="hidden" name="" value="">
+        <input type="hidden" name="width" value="{{width}}" />
+        <input type="hidden" name="height" value="{{height}}" />
     </form>
     <div id="collection-modal" class="show-assets collection-embed" style="width: 650px">
         <div class="collection-body">
