--- a/mediathread/templates/lti_auth/landing_page.html
+++ b/mediathread/templates/lti_auth/landing_page.html
@@ -22,7 +22,7 @@
         }
     </style>
 </head>
-<body class="mediathread-background-logo">
+<body class="lti-landing-page mediathread-background-logo">
     <div id="header">
         <div id="standardnav_container">
             <div id="mediathread_logo">
