--- a/lti_auth/templates/lti_auth/fail_course_configuration.html
+++ b/lti_auth/templates/lti_auth/fail_course_configuration.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Course Configuration</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" media="screen" />
 </head>
 <body>
