add html entity

--- a/lti_auth/templates/lti_auth/fail_course_configuration.html
+++ b/lti_auth/templates/lti_auth/fail_course_configuration.html
@@ -15,7 +15,7 @@
                         Please contact your help desk to enable the component.<br />
 
                         {% if is_instructor or is_administrator %}
-                            <h3>Administrators & Instructors</h3>
+                            <h3>Administrators &amp; Instructors</h3>
                             <p>@todo - tell them how to enable</p>
                         {% endif %}
                     </small>
