# This is a combination of 3 commits. # The first commit's message is: LTI: Notify Staff & Thank Faculty Emails
# This is the 2nd commit message:

add video link

# This is the 3rd commit message:

updated link

--- a/mediathread/templates/lti_auth/fail_course_configuration.html
+++ b/mediathread/templates/lti_auth/fail_course_configuration.html
@@ -58,6 +58,7 @@
                     <input type="hidden" name="lms_course" value="{{lms_course}}">
                     <input type="hidden" name="lms_course_title" value="{{lms_course_title}}">
                     <input type="hidden" name="sis_course_id" value="{{sis_course_id}}">
+                    <input type="hidden" name="domain" value="{{domain}}">
                     <p>
                         <a href="http://mediathread.info" target="about:blank" class="btn btn-default btn-lg" style="margin-right: 5px;">Learn More</a>
                         <button type="submit" class="btn btn-primary btn-lg">Connect Now</button>
