addressable course URLs - basic course detail page
I'd like to get this in before it gets too stale. This route is only
accessible for superusers and isn't functional.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -74,11 +74,11 @@
                 {% block standardnav %}
                    <ul id="standardnav">
                         {% if course %}
-                            {% ifequal role_in_course "non-member" %}
+                            {% if role_in_course == "non-member" %}
                                 <li>
                                     <div class="nonmember">You are not a class member!</div>
                                 </li>
-                            {% endifequal %}
+                            {% endif %}
                             {% if user.is_impersonate %}
                                 <li>
                                     <a class="warning" href="/impersonate/stop/">Impersonate Stop</a>
