--- a/mediathread/templates/bootstrap3/messages.html
+++ b/mediathread/templates/bootstrap3/messages.html
@@ -1,6 +1,6 @@
 {% load bootstrap3 %}
 {% for message in messages %}
-    <div class="{{ message|bootstrap_message_classes }} alert-dismissable">
+    <div class="{{ message|bootstrap_message_classes }} alert-dismissible">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&#215;</button>
         {{ message | safe }}
     </div>
