Firefox Quantum: compatibility warning

--- a/mediathread/templates/assetmgr/install_chrome_extension.html
+++ b/mediathread/templates/assetmgr/install_chrome_extension.html
@@ -29,7 +29,7 @@
              alt="Compatible with Chromium"
              title="Compatible with Chromium">
     </div>
-    <div class="clearfix"></div>
+    <div class="clearfix"></div><br />
     <button class="btn btn-primary update-chrome-extension-hosturl">
         Update extension settings
     </button>
