--- a/mediathread/templates/assetmgr/install_firefox_extension.html
+++ b/mediathread/templates/assetmgr/install_firefox_extension.html
@@ -1,20 +1,11 @@
 {% load staticfiles %}
 
 <div id="firefox-install-container">
-    <h4><strong>Install Firefox extension</strong></h4>
     <p>
-        Use Mediathread's Firefox extension to import media
-        from various sites. You must be using Firefox to install
-        this extension.
+        The current version of Firefox does not support the Mediathread
+        extension. Please use the Chrome or Safari browser to install
+        the extension and import media.<br /><br />More information on the Mediathread
+        extension is available in our <a href="http://support.ctl.columbia.edu/knowledgebase/articles/43655-importing-items-with-the-mediathread-extension-fro">Knowledge Base</a>.
     </p>
-    <a id="firefox-install-button"
-       href="https://addons.mozilla.org/firefox/downloads/latest/669813/addon-669813-latest.xpi"
-       class="btn btn-primary pull-left">
-        + Add to Firefox
-    </a>
-    <div class="pull-left">
-        <img width="32" height="32"
-             src="{% static 'img/browser_icons/firefox/logo_128.png' %}">
-    </div>
     <div class="clearfix"></div>
 </div>
