add cookie notice

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -54,6 +54,9 @@
 
         <link rel="chrome-webstore-item"
               href="https://chrome.google.com/webstore/detail/gambcgmmppeklfmbahomokogelnaffbi">
+
+        <link rel="stylesheet" href="https://search.sites.columbia.edu/cu-privacy-notice/cu-privacy-notice.css" />
+        <script src="https://search.sites.columbia.edu/cu-privacy-notice/cu-privacy-notice.js"></script>
     </head>
 
     {% course_role for request.user in course as role_in_course %}
