--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -347,6 +347,7 @@
             {% if settings.GOOGLE_ANALYTICS_ID %}
                 var _gaq = _gaq || [];
                 _gaq.push(['_setAccount', '{{settings.GOOGLE_ANALYTICS_ID}}']);
+                _gaq.push (['_gat._anonymizeIp']);
                 _gaq.push(['_trackPageview']);
 
                 (function () {
