--- a/mediathread/templates/base_new.html
+++ b/mediathread/templates/base_new.html
@@ -347,6 +347,7 @@ A new base.html without the course context overwritten in the template.
         {% if settings.GOOGLE_ANALYTICS_ID %}
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', '{{settings.GOOGLE_ANALYTICS_ID}}']);
+        _gaq.push (['_gat._anonymizeIp']);
         _gaq.push(['_trackPageview']);
 
         (function () {
