Delete course interface
Add a clear materials and delete course option to the materials interface. This is for superusers only, and will be a convenience as we begin to archive courses.

--- a/mediathread/templates/dashboard/class_delete_materials.html
+++ b/mediathread/templates/dashboard/class_delete_materials.html
@@ -86,8 +86,10 @@
             </div>
 
             <br /><br />
-            <input class="btn btn-danger" type="submit" name="clear-course"
+            <input class="btn btn-warning" type="submit" name="clear-course"
                 value="Permanently Delete Materials"></input>
+            <input class="btn btn-danger" type="submit" name="delete-course"
+                value="Permanently Delete Course"></input>
             <div class="visualclear"></div>
         </div>
     </form>
