--- a/mediathread/templates/dashboard/base_course_dashboard.html
+++ b/mediathread/templates/dashboard/base_course_dashboard.html
@@ -22,6 +22,13 @@
                             {% if '/sources/' in request.path %}class="active"{% endif %}
                             href="/dashboard/sources/">Sources</a>
                     </li>
+                    {% if user.is_staff %}
+                    <li>
+                        <a
+                            {% if '/panopto/' in request.path %}class="active"{% endif %}
+                            href="/dashboard/panopto/">Panopto Sources</a>
+                    </li>
+                    {% endif %}
                     <li>
                         <a
                             {% if '/migrate/' in request.path %}class="active"{% endif %}
