--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -652,24 +652,24 @@ ul#standardnav {
 	clear: both;
 }
 
-#footer #logo_ccnmtl
+#footer #logo_ctl
 {
     display: block;
     clear: right;
     float: left;
-    width: 119px;
-    height: 26px;
+    width: 160px;
+    height: 29.6px;
     overflow: hidden;
     margin: 1px 10px 0 10px;
     padding: 0;
     border: 0;
 }
 
-#footer #logo_ccnmtl a
+#footer #logo_ctl a
 {
     display: block;
-    width: 119px;
-    height: 26px;
+    width: 160px;
+    height: 29.6px;
     margin: 0;
     padding: 0;
     border: 0;
